--- a/Basketball_Field_Bill.xaml
+++ b/Basketball_Field_Bill.xaml
@@ -19,8 +19,8 @@
         WindowStyle="None"
         
         Name="BillWindow_BK"
-        DataContext="{StaticResource BillVM_FB}"
-        Title="LOGIN" Height="500" Width="550">
+        DataContext="{StaticResource BillVM_FB2}"
+        Title="LOGIN" Height="770" Width="1000">
 
     <Window.Resources>
         <Style TargetType="TextBlock">
@@ -29,7 +29,7 @@
         </Style>
         <Style TargetType="Rectangle">
             <Setter Property="Stroke" Value="DarkBlue" ></Setter>
-            
+
         </Style>
     </Window.Resources>
     <!--<ContentPresenter>
@@ -42,7 +42,7 @@
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="100"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
-            
+
 
         </Grid.RowDefinitions>
 
@@ -53,89 +53,106 @@
 
         <TextBlock Text="---BASKETBALL COURT PAYMENT---" Grid.ColumnSpan="3" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" FontFamily="Bungee Inline"></TextBlock>
 
-        <!--<Button
-            Width="50"
-            Grid.Row="2"
-            Content="{materialDesign:PackIcon ArrowLeftBoldBox }"
-            ToolTip="Icon"
-            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Left" Margin="20,0,0,0" />-->
-        <Grid Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="10,50,10,0">
-            <DockPanel Height="310">
-                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                    <ItemsControl x:Name="IC_football" ItemsSource="{Binding List_fieldwwithBooking}">
-                        <ItemsControl.ItemTemplate>
 
-                            <DataTemplate>
-                                <Grid>
-                                    <Expander
-                                        Header="{Binding}"
-                                        Width="500"
-                                        VerticalAlignment="Center"
-                                        HorizontalAlignment="Center"
-                                        FontSize="20">
-                                        <Expander.HeaderTemplate>
-                                            <DataTemplate>
-                                                <StackPanel Orientation="Horizontal">
-                                                    <TextBlock Text="{Binding List_Field.name}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></TextBlock>
-                                                </StackPanel>
-                                            </DataTemplate>
-                                        </Expander.HeaderTemplate>
-                                        
-                                        <StackPanel
-                                            Orientation="Vertical"
-                                            TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
-                                            Margin="24,8,24,16">
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                                                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                                                </Grid.ColumnDefinitions>
-                                                <Grid Grid.Column="0">
-                                                    <ListView x:Name="Lvfield1" ItemsSource="{Binding List_Booking}">
-                                                        <ListView.ItemTemplate>
-                                                            <DataTemplate>
-                                                                <StackPanel Orientation="Horizontal">
-                                                                    <!--<Rectangle 
-                                                        HorizontalAlignment="Left" 
-                                                        Height="34" 
-                                                        Width="140" 
-                                                        RadiusY="4" 
-                                                        RadiusX="4"
-                                                        Stroke="DarkBlue" 
-                                                        Margin="0,0,5,0" 
-                                                        StrokeThickness="1.5"/>-->
-                                                                    <TextBlock 
-                                                        Text="{Binding List_Booking.start_time}"
-                                                        
-                                                        FontSize="20"
-                                                        Foreground="Black"
-                                                        FontStretch="Medium"
-                                                    />
-                                                                    <TextBlock Text=" - " FontStretch="Medium" Foreground="Black" FontSize="20">
-                                                                    </TextBlock>
-                                                                    <TextBlock Text="{Binding List_Booking.end_time}" FontStretch="Medium" Foreground="Black" FontSize="20"></TextBlock>
+        <Grid Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="0">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition Height="2*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
 
-                                                                </StackPanel>
-                                                            </DataTemplate>
-                                                        </ListView.ItemTemplate>
-                                                    </ListView>
-                                                </Grid>
+                </Grid.ColumnDefinitions>
+                <Grid  Grid.Column="0">
+                    <Border Background="Snow" CornerRadius="20" Height="auto" Margin="20,0,20,0" Width="auto">
+                        <Border.BitmapEffect>
+                            <DropShadowBitmapEffect Opacity="0.6" Softness="0.3" Direction="330" Color="Red"/>
+                        </Border.BitmapEffect>
+
+                        <GroupBox Background="{x:Null}" Header="Booking Information" Margin="0" FontSize="22" BorderThickness="0" >
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition Width="1.3*"></ColumnDefinition>
+                                    <ColumnDefinition ></ColumnDefinition>
+                                    <ColumnDefinition></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <StackPanel Grid.Column="0" Width="130" Height="150" >
+                                    <Label Height="50">Booking id</Label>
+                                    <Label Height="50" FontSize="16">Customer Name</Label>
+                                    <Label Height="50" FontSize="16" Margin="0,0,-0.4,0">Customer Phone</Label>
+                                </StackPanel>
+                                <StackPanel Width="155" Grid.Column="1">
+                                    <TextBox x:Name="Booking_id"   Height="40" Text="{Binding Booking_id}" IsReadOnly="True"  />
+                                    <TextBox x:Name="C_name" Margin="0,0,0,0" Width="auto" Height="50" Text="{Binding CustomerName}" IsReadOnly="True"/>
+                                    <TextBox x:Name="C_phone"  Height="50"  Text="{Binding CustomerPhoneNum}"   IsReadOnly="True"/>
+
+                                </StackPanel>
+                                <StackPanel Height="150" Grid.Column="2" >
+                                    <Label Height="50" Margin="28,0,-0.4,0">Start time</Label>
+                                    <Label Height="50" Margin="28,0,-0.4,0">End time</Label>
+                                    <Label Height="50" Margin="2,0,-1,0">Date booking</Label>
+                                </StackPanel>
+                                <StackPanel  Width="155" Grid.Column="3" >
+                                    <TextBox x:Name="Starttime"   Height="40" Width="180" Text="{Binding StartTime, StringFormat='{}{0:h:mm tt}'}" IsReadOnly="True"></TextBox>
+                                    <TextBox  x:Name="EndTime"  Height="50" Width="180" Text="{Binding EndTime, StringFormat='{}{0:h:mm tt}'}" IsReadOnly="True"></TextBox>
+                                    <TextBox  x:Name="DateBooking"  Height="50" Width="180" Text="{Binding DateBooking, StringFormat='{}{0:MM/dd/yyyy}'}" IsReadOnly="True"></TextBox>
+                                </StackPanel>
+                            </Grid>
+                        </GroupBox>
+                    </Border>
+                </Grid>
+                <Grid Grid.Column="1">
+
+                    <Grid >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1*"></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Label FontSize="68" FontFamily="Algerian"  Grid.Row="0" Content="  TOTAL" Margin="0,0,0,0.4" Height="110" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="255" />
+                        <TextBlock
+                                   x:Name="txbTotalMoney"
+                                   Text="{Binding FieldPrice, StringFormat=0}"
+                                   Height="92" FontSize="55" Margin="0,0,100,0" TextAlignment="Justify" HorizontalAlignment="Right" Width="auto" VerticalAlignment="Bottom" Grid.Row="1" FontFamily="Algerian"  />
+
+                    </Grid>
 
 
-                                                <Grid Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left">
-                                                    <Button Width="100" Content="PAY" Command="{Binding }" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" Margin="100,0,0,0" />
+                </Grid>
+            </Grid>
+            <Grid Height="350" Grid.Row="1" Margin="0,30,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Border Margin="20,60,0,0" Background="Snow" Grid.Column="0" Height="auto" Width="auto" CornerRadius="20">
+                    <Border.BitmapEffect>
+                        <DropShadowBitmapEffect Opacity="0.6" Color="#FFFF0303" Softness="0.3"/>
+                    </Border.BitmapEffect>
 
-                                                </Grid>
-                                            </Grid>
-                                        </StackPanel>
-                                    </Expander>
-                                    <Border/>
-                                </Grid>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </ScrollViewer>
-            </DockPanel>
+                    <DataGrid IsReadOnly="True" HeadersVisibility="Column" BorderBrush="{x:Null}" Background="Transparent" ItemsSource="{Binding DayList}" AutoGenerateColumns="False" SelectedValue="{Binding SelectedItem}" FontSize="12" Margin="0,0,0,0" >
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Customer Name" Binding="{Binding Customer_name}"/>
+                            <DataGridTextColumn Header="Phone" Binding="{Binding Customer_PhoneNum, StringFormat=0, Mode=OneTime}"/>
+                            <DataGridTextColumn Header="Booking id" Binding="{Binding id}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Field name" Binding="{Binding field.name}"/>
+                            <DataGridTextColumn Header="Day Booking" Binding="{Binding datePlay, StringFormat='{}{0:MM/dd/yyyy}', Mode=OneTime}"/>
+                            <DataGridTextColumn Header="Start time" Binding="{Binding start_time, StringFormat='{}{0:h:mm tt}', Mode=OneTime}"/>
+                            <DataGridTextColumn Header="End time" Binding="{Binding end_time, StringFormat='{}{0:h:mm tt}'}"/>
+                            <DataGridTextColumn Header="Field Price" Binding="{Binding field.fieldtype.price, StringFormat=0}"/>
+                        </DataGrid.Columns>
+
+                    </DataGrid>
+                </Border>
+                <Grid Width="auto" Grid.Column="1">
+                    <Button VerticalAlignment="Bottom" Content="PAY" Foreground="White" Background="OrangeRed"   FontSize="20"  Margin="65,10,64.6,0"  Height="76" Click="Button_Click_3"></Button>
+                    <Button Content="Edit"    FontSize="20" Click="Button_Click_1"       VerticalAlignment="Top"  Margin="65,180,64.6,0" Height="76" />
+
+                </Grid>
+            </Grid>
+
         </Grid>
 
 
