--- a/ResourceXAML/MainResource.xaml
+++ b/ResourceXAML/MainResource.xaml
@@ -6,6 +6,7 @@
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
     <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
     <viewmodel:BillViewModel x:Key="BillVM"></viewmodel:BillViewModel>
-    <viewmodel:PaymentTemplateViewModel x:Key="PaymentVM"></viewmodel:PaymentTemplateViewModel>
     <viewmodel:BillViewModel_football x:Key="BillVM_FB"></viewmodel:BillViewModel_football>
+    <viewmodel:BillViewModel_Football2 x:Key="BillVM_FB2"></viewmodel:BillViewModel_Football2>
+    
 </ResourceDictionary>
