--- a/BasketballField.xaml
+++ b/BasketballField.xaml
@@ -118,7 +118,7 @@
                         Grid.Column="1"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        Text="Adjust" />
+                        Text="Edit" />
                 </Grid>
             </Button>
             <Button
