--- a/SoccerField.xaml
+++ b/SoccerField.xaml
@@ -93,8 +93,8 @@
                 HorizontalContentAlignment="Stretch"
                 materialDesign:ButtonAssist.CornerRadius="5"
                 Background="#00ADB5"
-                Command="{Binding ShowEditFieldCommand}">
-                <Grid>
+                Command="{Binding ShowEditFieldCommand}" Margin="16,0,0,0">
+                <Grid HorizontalAlignment="Left" Width="96">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="5*" />
                         <RowDefinition Height="3*" />
@@ -118,7 +118,7 @@
                         Grid.Column="1"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        Text="Adjust" />
+                        Text="Edit"  />
                 </Grid>
             </Button>
             <Button
